fix header-search z-index

--- a/styles/components/SearchInput.scss
+++ b/styles/components/SearchInput.scss
@@ -16,6 +16,7 @@
     background-color: $transparent;
     border: none;
     outline: none;
+    z-index: 999;
     &:focus {
       & + label {
         // top: -10px;
